--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         </nav>
         </header>
 
+        <!-- City Search-->
+
         <div class="container-fluid">
-            <div class="col-6">
+            <div class="col-4">
             <h4>Search for a City:</h4>
             
 
@@ -30,13 +32,19 @@
             </div>
           </div>
         
+        <!-- City with current date and weather-->
 
-          <div class="weatherContainer col-6">
+          <div class="card">
+          <div class="weatherContainer col-8">
           </div>
+        </div>
+
         </div>  
 
+        <!-- Date and weather for next 5 days -->
 
-          <div class="fiveDays row">
+          <div class="fiveDays row-fluid card">
+              <h2>5-Day Forecast:</h2>
 
           </div>
 
