--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- Date and weather for next 5 days -->
         <div class = "col-12">
-          <div class="fiveDays row">
+          <div class="fiveDays robw">
               <h2>5-Day Forecast:</h2>
           </div>
 
